Network form message and scrollbar fix

--- a/swarmmanagerfrontend/src/app/components/shell/shell.component.scss
+++ b/swarmmanagerfrontend/src/app/components/shell/shell.component.scss
@@ -128,6 +128,10 @@
   overflow: auto;
 }
 
+.shell-content > div.content {
+  width: calc(100vw - 26rem);
+}
+
 @media (max-width: $min-With-media-query)
 {
   .shell-content {
